exemple de binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <div class="alert alert-primary">
   Bonjour Le monde <i class="bi bi-emoji-smile-upside-down"></i>
 </div>
+<p>cc je suis le app</p>
+<div class="alert alert-success">
+  <app-first />
+  <app-first />
+  <app-first />
+</div>
+<div class="alert alert-danger">
+  <app-second/>
+</div>
