correction exo ColorComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-primary">
+<!-- <div class="alert alert-primary">
   Bonjour Le monde <i class="bi bi-emoji-smile-upside-down"></i>
 </div>
 <p>cc je suis le app</p>
@@ -9,4 +9,5 @@
 </div>
 <div class="alert alert-danger">
   <app-second/>
-</div>
+</div> -->
+<app-color />
