--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -11,5 +11,29 @@
 <p>Le contenu de l'input est : {{message}}</p>
 
 <div class="alert alert-secondary">
-  <app-second/>
+  <app-second [myVar]="'cc je suis le first component'" />
+  <!-- <app-second /> -->
 </div>
+
+<!-- <ol>
+  <li>1</li>
+  <li>1</li>
+  <li>1</li>
+  <li>1</li>
+  <li>1</li>
+  <li>1</li>
+  <li>1</li>
+  <li>1</li>
+  <li>1</li>
+  <li>1</li>
+</ol>
+
+<div style="background-color: red; margin: 25px;">
+  div1
+  <div style="background-color: yellow; margin: 25px;">
+    div 2
+    <div style="background-color: black; margin: 25px;">
+    div 3
+    </div>
+  </div>
+</div> -->
