--- a/src/app/cv/cv/cv.component.html
+++ b/src/app/cv/cv/cv.component.html
@@ -1,4 +1,4 @@
 <div class="row">
-  <div class="col"><app-cv-list [cvs]="cvs" /></div>
+  <div class="col"><app-cv-list (forwardCv)="getSelectedCv($event)" [cvs]="cvs" /></div>
   <div class="col"><app-cv-card [cv]="selectedCv" /></div>
 </div>
