--- a/src/app/directives/ng-class/ng-class.component.html
+++ b/src/app/directives/ng-class/ng-class.component.html
@@ -8,5 +8,7 @@
   (click)="interrupteur()" class="lampe">lampe</div>
 
   <div appHighlight>Test directive</div>
-  <div [in]="'lightblue'" [out]="'white'" appHighlight>Test directive</div>
+  <div appRainbow [in]="'lightblue'" [out]="'white'" appHighlight>Test directive</div>
   <div [in]="'pink'" [out]="'green'" appHighlight>Test directive</div>
+
+  <input type="text" appRainbow class="form-control">
