--- a/src/app/cv/cv/cv.component.html
+++ b/src/app/cv/cv/cv.component.html
@@ -1,4 +1,8 @@
 <div class="row">
-  <div class="col"><app-cv-list (forwardCv)="getSelectedCv($event)" [cvs]="cvs" /></div>
+  <div class="col">
+    <div class="alert alert-warning">
+      {{ today | date: 'full' | uppercase}} - {{ 1 | btcToUsd | currency: 'USD' }} - {{ 1 | btcToUsd:false}}
+    </div>
+    <app-cv-list (forwardCv)="getSelectedCv($event)" [cvs]="cvs" /></div>
   <div class="col"><app-cv-card [cv]="selectedCv" /></div>
 </div>
