--- a/src/app/todo/todo/todo.component.html
+++ b/src/app/todo/todo/todo.component.html
@@ -2,18 +2,21 @@
   <div class="col">
     <ol class="list-group">
       <li
+        *ngFor="let todo of todos"
         class="list-group-item">
-        TODO
+        {{todo.name}} : {{todo.content}}
         <i
+          (click)="deleteTodo(todo)"
           class="bi bi-trash2"></i>
       </li>
     </ol>
   </div>
   <div class="col">
     name:
-    <input  type="text" class="form-control" /> content:
-    <input  type="text" class="form-control" />
+    <input  type="text" [(ngModel)]="todo.name" class="form-control" /> content:
+    <input  type="text" [(ngModel)]="todo.content" class="form-control" />
     <button
+     (click)="addTodo()"
       class="btn btn-primary m-2"
     >
       add
