--- a/src/app/cv/cv/cv.component.html
+++ b/src/app/cv/cv/cv.component.html
@@ -6,3 +6,4 @@
     <app-cv-list (forwardCv)="getSelectedCv($event)" [cvs]="cvs" /></div>
   <div class="col"><app-cv-card [cv]="selectedCv" /></div>
 </div>
+<app-embauche />
