--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,5 @@
-<!-- <div class="alert alert-primary">
-  Bonjour Le monde <i class="bi bi-emoji-smile-upside-down"></i>
-</div>
-<p>cc je suis le app</p>
-<div class="alert alert-success">
-  <app-first />
-  <app-first />
-  <app-first />
-</div>
-<div class="alert alert-danger">
-  <app-second/>
-</div> -->
-<app-cv/>
+<app-navbar/>
+<hr>
+<router-outlet/>
+<hr>
+<h2>Footer</h2>
