--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,7 @@
         <a class="nav-link" [routerLink]="['todo']" routerLinkActive="active text-primary">Todo</a>
         <a class="nav-link" [routerLink]="['word']" routerLinkActive="active text-primary">Mini Word</a>
         <a class="nav-link" [routerLink]="['color']" routerLinkActive="active text-primary">Color</a>
+        <a class="nav-link" [routerLink]="['login']" routerLinkActive="active text-primary">Login</a>
       </div>
     </div>
   </div>
