--- a/src/app/cv/cv-list/cv-list.component.html
+++ b/src/app/cv/cv-list/cv-list.component.html
@@ -3,6 +3,6 @@
     'list-group-item-secondary': isOdd,
     'list-group-item-primary': !isOdd
   }" class="list-group-item">
-    <app-cv-item (selectCv)="forwardCv.emit($event)" [cv]="cv" />
+    <app-cv-item  [cv]="cv" />
   </li>
 </ol>
