--- a/src/app/cv/cv/cv.component.html
+++ b/src/app/cv/cv/cv.component.html
@@ -3,7 +3,7 @@
     <div class="alert alert-warning">
       {{ today | date: 'full' | uppercase}} - {{ 1 | btcToUsd | currency: 'USD' }} - {{ 1 | btcToUsd:false}}
     </div>
-    <app-cv-list (forwardCv)="getSelectedCv($event)" [cvs]="cvs" /></div>
+    <app-cv-list [cvs]="cvs" /></div>
   <div class="col"><app-cv-card [cv]="selectedCv" /></div>
 </div>
 <app-embauche />
