--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" [routerLink]="['']" routerLinkActive="active text-primary" [routerLinkActiveOptions]="{exact: true}">Home</a>
-        <a class="nav-link" [routerLink]="['cv']" routerLinkActive="active text-primary">Cv</a>
+        <a class="nav-link" [routerLink]="['cv']" routerLinkActive="active text-primary" [routerLinkActiveOptions]="{exact: true}">Cv</a>
+        <a class="nav-link" [routerLink]="['cv','add']" routerLinkActive="active text-primary">Add Cv</a>
         <a class="nav-link" [routerLink]="['todo']" routerLinkActive="active text-primary">Todo</a>
         <a class="nav-link" [routerLink]="['word']" routerLinkActive="active text-primary">Mini Word</a>
         <a class="nav-link" [routerLink]="['color']" routerLinkActive="active text-primary">Color</a>
