--- a/src/app/cv/details-cv/details-cv.component.html
+++ b/src/app/cv/details-cv/details-cv.component.html
@@ -34,6 +34,7 @@
               </tbody>
             </table>
             <div class="d-flex justify-content-center">
+              <!-- Ce Boutton ne doit s'affucher que si on est connecté -->
               <button
                 (click)="deleteCv()"
                 class="btn btn-danger">
