--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand">PLB</a>
+    <a class="navbar-brand">{{'APP.TITLE' | translate}}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,6 +16,8 @@
       <!-- Todo : Ajouter le lien pour le logout et il faut afficher le logout quand est connecté et le login inversement -->
         <a *ngIf="!authService.isAuthenticated()" class="nav-link" [routerLink]="['login']" routerLinkActive="active text-primary">Login</a>
         <a *ngIf="authService.isAuthenticated()" class="nav-link" (click)="logout()">Logout</a>
+        <button (click)="translate('fr')" class="btn btn-primary">Francais</button>
+        <button (click)="translate('en')" class="btn btn-danger">English</button>
       </div>
     </div>
   </div>
