--- a/src/app/cv/cv-list/cv-list.component.html
+++ b/src/app/cv/cv-list/cv-list.component.html
@@ -1,4 +1,4 @@
-<ol class="list-group">
+<ol class="list-group" data-cy="listCvs">
   <li *ngFor="let cv of cvs; let isOdd = odd" [ngClass]="{
     'list-group-item-secondary': isOdd,
     'list-group-item-primary': !isOdd
