--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,7 +3,9 @@
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input #emailInput="ngModel" ngModel required email name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    <div *ngIf="emailInput.invalid && emailInput.touched" class="alert alert-danger">Vous devez saisir un email valid</div>
+    @if (emailInput.invalid && emailInput.touched) {
+      <div class="alert alert-danger">Vous devez saisir un email valid</div>
+    }
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
