--- a/src/app/cv/embauche/embauche.component.html
+++ b/src/app/cv/embauche/embauche.component.html
@@ -1,8 +1,12 @@
-<div class="alert alert-secondary mt-2" *ngIf="embauchees.length">
-  Liste des cv pré embauchées:
-  <div class="embauchee row">
-    <div class="col-4" *ngFor="let embauche of embauchees">
-      <app-cv-item [size]="150" [cv]="embauche" />
+@if (embauchees.length) {
+  <div class="alert alert-secondary mt-2">
+    Liste des cv pré embauchées:
+    <div class="embauchee row">
+      @for (embauche of embauchees; track embauche) {
+        <div class="col-4">
+          <app-cv-item [size]="150" [cv]="embauche" />
+        </div>
+      }
     </div>
   </div>
-</div>
+}
