--- a/src/app/todo/todo/todo.component.html
+++ b/src/app/todo/todo/todo.component.html
@@ -1,14 +1,15 @@
 <div class="row">
   <div class="col">
     <ol class="list-group">
-      <li
-        *ngFor="let todo of todos"
-        class="list-group-item">
-        {{todo.name}} : {{todo.content}}
-        <i
-          (click)="deleteTodo(todo)"
+      @for (todo of todos; track todo) {
+        <li
+          class="list-group-item">
+          {{todo.name}} : {{todo.content}}
+          <i
+            (click)="deleteTodo(todo)"
           class="bi bi-trash2"></i>
-      </li>
+        </li>
+      }
     </ol>
   </div>
   <div class="col">
@@ -16,9 +17,9 @@
     <input  type="text" [(ngModel)]="todo.name" class="form-control" /> content:
     <input  type="text" [(ngModel)]="todo.content" class="form-control" />
     <button
-     (click)="addTodo()"
+      (click)="addTodo()"
       class="btn btn-primary m-2"
-    >
+      >
       add
     </button>
   </div>
